# lazyviewer

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  TODO.md  lazyviewer.py  pyproject.toml
.github/workflows/: ci.yml  (+1 more)
lazyviewer/: __init__.py  __main__.py  ansi.py  app.py  app_runtime.py  app_runtime_git_jumps.py  app_runtime_index_warmup.py  app_runtime_layout.py  app_runtime_mouse.py  app_runtime_utils.py  cli.py  config.py  editor.py  fuzzy.py  git_jumps.py  git_status.py  gitignore.py  highlight.py  index_warmup.py  input.py  key_handlers.py  layout.py  loop.py  mouse.py  navigation.py  preview.py  render.py  render_help.py  runtime_loop.py  runtime_navigation.py  runtime_tree_filter.py  screen_utils.py  state.py  symbols.py  terminal.py  tree.py  tree_filter.py  tree_sync.py  ui_theme.py  watch.py  (+1 more)
tests/: README.md  conftest.py  test_ansi.py  test_app_runtime.py  test_cli.py  test_config.py  test_content_search.py  test_core.py  test_ctrl_p_integration.py  test_fuzzy.py  test_git.py  test_git_status_overlay.py  test_gitignore_integration.py  test_highlight.py  test_input.py  test_key_handlers.py  test_mouse.py  test_navigation.py  test_performance_budgets.py  test_preview.py  test_preview_clicks.py  test_preview_events.py  test_render.py  test_render_core.py  test_render_filtering.py  test_render_help.py  test_render_status.py  test_render_sticky.py  test_runtime_loop.py  test_runtime_navigation.py  test_runtime_tree_filter.py  test_search.py  test_session.py  test_source_pane_ops.py  test_symbols.py  test_terminal.py  test_tree_filter.py  test_watch.py
(+193 files in other folders)
