[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyviewer"
version = "0.1.1"
description = "Terminal source tree viewer with split-pane preview and search"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Adam Ritter" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = [
  "Pygments>=2.15",
  "platformdirs>=4.2",
  "tree-sitter-languages>=1.10; python_version < '3.13'",
  "tree-sitter-language-pack>=0.8; python_version >= '3.13'",
]

[project.urls]
Homepage = "https://github.com/adamritter/lazyviewer"
Repository = "https://github.com/adamritter/lazyviewer"
Issues = "https://github.com/adamritter/lazyviewer/issues"

[project.scripts]
lazyviewer = "lazyviewer.cli:main"

[tool.setuptools]
include-package-data = false


[tool.setuptools.packages.find]
include = ["lazyviewer*"]
